// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spinnerコンポーネント サイズがlgの場合、正しくレンダリングされること 1`] = `
<div>
  <div
    aria-label="loading"
    class="inline-block animate-spin w-8 h-8 rounded-full border-[3px] border-current border-t-transparent text-blue"
    role="status"
  >
    <span
      class="sr-only"
    >
      Loading...
    </span>
  </div>
</div>
`;

exports[`Spinnerコンポーネント サイズがmdの場合、正しくレンダリングされること 1`] = `
<div>
  <div
    aria-label="loading"
    class="inline-block animate-spin w-6 h-6 rounded-full border-[3px] border-current border-t-transparent text-blue"
    role="status"
  >
    <span
      class="sr-only"
    >
      Loading...
    </span>
  </div>
</div>
`;

exports[`Spinnerコンポーネント サイズがsmの場合、正しくレンダリングされること 1`] = `
<div>
  <div
    aria-label="loading"
    class="inline-block animate-spin w-4 h-4 rounded-full border-[3px] border-current border-t-transparent text-blue"
    role="status"
  >
    <span
      class="sr-only"
    >
      Loading...
    </span>
  </div>
</div>
`;

exports[`Spinnerコンポーネント デフォルトのサイズで正しくレンダリングされること 1`] = `
<div>
  <div
    aria-label="loading"
    class="inline-block animate-spin w-6 h-6 rounded-full border-[3px] border-current border-t-transparent text-blue"
    role="status"
  >
    <span
      class="sr-only"
    >
      Loading...
    </span>
  </div>
</div>
`;
